Version 0.6.3 (2014-10-27)

Version 0.6-2 (2014-06-30)

o added Summarise, to replace summarise
o Added HairEyePlace data - 4 x 5 x 2, Caithness and Aberdeen hair/eye color (rev 223)
o Added PhdPubs data from Long (1997) - publications by PhD candidates
o Allow Summarise to work with models w/o a deviance() function
o Fixed bug in Summarise wrt degrees of freedom

Version 0.6-1 (2014-04-14)

o Added ICU data
o Added Toxaemia data - multivariate response contingency table (rev 209)
o Added Vietnam data - 2 x 5 x 4 frequency table (rev 210)
o Added logLik.loglm to allow use of AIC() and BIC() for loglm models (rev 212)
o Fixed loddsratio.Rd to work with revised vcd::CoalMiners data  (rev 212)
o Added blogits for bivariate binary response data
o Added Vote1980 data (rev 214)

Version 0.6-0 (2014-03-07)

o Removed Authors: in DESCRIPTION, bumped version

Version 0.5-12 (2013-12-16)

o Added ShakeWords data set- word frequency counts from Shakespeare (rev 188)
o Added Geissler data-- all family sizes for Saxony sex composition data (rev 190)
o Added logseries functions for the logarithmic series distribution (rev 191)
o Added Depends data -- dependencies of r packages (rev 192)
o Fixed buglet in seq_loglm() not respecting arrays
o Added seq_mosaic() (rev 194)
o Added CyclingDeaths data (rev 196)
o mosaic3d() gets an interpolate= option to control shading levels (rev 197)
o Fixed bug in seq_mosaic, thx to David Meyer (rev 200)
o Fixed bug in seq_loglm() when marginals != 1:nf

Version 0.5-11 (2013-07-01)

o Added mosaic.glmlist to plot mosaics (or other strucplots) for some or all models in a glmlist (rev 169)
o Added loglim-utilities.R, containing a suite of functions to provide a more conceptual way to specify
  loglinear models by type ('joint', 'conditional', 'mutual', 'markov', 'saturated') (rev 171)
o Added mosaic.loglmlist, similar to mosaic.glmlist for models fit using MASS::loglm (rev 173)